--- a/index.html
+++ b/index.html
@@ -1,116 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mettle Hospitality | Official Site of Chef Vidit Aren | Elite Hospitality Consultant</title>
-
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png?v=1">
-    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png?v=1">
-    <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg?v=1">
-    <link rel="shortcut icon" href="favicon/favicon.ico?v=1">
-    <link rel="manifest" href="favicon/site.webmanifest?v=1">
-    <meta name="theme-color" content="#262828"> 
-
-    <meta name="description" content="Official consultancy of renowned Chef Vidit Aren. Elite culinary and hospitality consulting based in Mumbai, India. Specializing in Vantara (Ambani), Basque Mumbai, and Discovery's 'Star vs Food'.">
-    <meta name="keywords" content="Chef Vidit Aren, Mettle Hospitality, Vantara Jamnagar, Ambani wedding, Basque Mumbai, Breve, Star vs Food, kitchen consultant, CN Traveller 40 under 40">
-    <link rel="canonical" href="https://www.mettle-hospitality.com/">
-    
-    <meta property="og:title" content="Mettle Hospitality | Strength Under Pressure">
-    <meta property="og:description" content="Elite culinary and hospitality consultancy led by renowned Chef Vidit Aren.">
-    <meta property="og:image" content="images/og-home.jpg">
-    <meta property="og:url" content="https://www.mettle-hospitality.com/">
-
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us - Mettle Hospitality</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="images/mettle-logo.jpg" type="image/jpeg">
 </head>
 <body>
 
-    <nav class="nav-header">
-        <div class="nav-container">
-            <a href="index.html" class="nav-logo">
-                <img src="images/arenlogo4.png" alt="Mettle Logo" style="height: 60px;">
-            </a>
-            <div class="nav-menu">
-                <a href="index.html" class="nav-link active">Home</a>
-                <a href="about.html" class="nav-link">About Us</a>
-                <a href="work.html" class="nav-link">Our Work</a>
-                <a href="media.html" class="nav-link">Media</a>
-                <a href="contact.html" class="nav-link">Contact</a>
-            </div>
-            <div class="mobile-menu-toggle" id="mobile-toggle">
-                <span></span><span></span><span></span>
-            </div>
-        </div>
-    </nav>
+  <!-- HEADER -->
+  <header id="navbar">
+    <div class="header-container">
+      <div class="logo">
+        <img src="images/mettle-logo.jpg" alt="Mettle Hospitality">
+        <span>Mettle</span>
+      </div>
+      <button class="mobile-toggle" id="mobile-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <nav id="nav-menu">
+        <ul>
+          <li><a href="index.html" class="nav-link">Home</a></li>
+          <li><a href="about.html" class="nav-link active">Founder</a></li>
+          <li><a href="service.html" class="nav-link">Services</a></li>
+          <li><a href="work.html" class="nav-link">Projects</a></li>
+          <li><a href="media.html" class="nav-link">Media</a></li>
+          <li><a href="contact.html" class="nav-link">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <header class="hero-section">
-        <div class="slideshow-container">
-            <div class="slide active" style="background-image: url('images/cornback.JPG');">
-                <div class="hero-content-container">
-                    <h1>Strength Under Pressure</h1>
-                    <p>Forging culinary visions into enduring realities.</p>
-                    <div class="hero-buttons">
-                        <a href="work.html" class="btn btn-primary">Our Work</a>
-                        <a href="contact.html" class="btn btn-secondary">Enquire Now</a>
-                    </div>
-                </div>
-            </div>
-            <div class="slide" style="background-image: url('images/souffleback.JPG');"></div>
-            <div class="slide" style="background-image: url('images/jarback.jpg');"></div>
-            <div class="slide" style="background-image: url('images/whiteback.JPG');"></div>
-        </div>
-    </header>
+  <!-- HERO SECTION (About) -->
+  <section class="hero" id="about-hero">
+    <div class="hero-content">
+      <p class="label-grey">About Mettle Hospitality</p>
+      <h1>Crafting Culinary <span>Excellence with Precision and Passion</span>.</h1>
+      <p>Mettle — Strength Under Pressure. Exceptional restaurants aren't built on passion alone. They're forged through precision, discipline, and an unrelenting focus on every moment of the guest experience.</p>
+    </div>
+  </section>
 
-    <section class="section">
-        <div class="container">
-            <div class="section-title">
-                <h2>The Four Elements</h2>
-                <p>Our philosophy is forged in the fire of the kitchen.</p>
-            </div>
-            <div class="elements-grid">
-                <div class="element-card"><span class="element-icon">🔥</span><h3>Fire</h3><p>The heat and passion required to ignite a vision.</p></div>
-                <div class="element-card"><span class="element-icon">💧</span><h3>Water</h3><p>Fluid operational flow and adaptability.</p></div>
-                <div class="element-card"><span class="element-icon">🌱</span><h3>Earth</h3><p>Grounded in honest produce and sourcing.</p></div>
-                <div class="element-card"><span class="element-icon">⚒️</span><h3>Metal</h3><p>Resilience and precision of the anvil.</p></div>
-            </div>
-        </div>
-    </section>
+  <!-- FOUNDER SECTION -->
+  <section id="founder">
+    <div class="section-header">
+      <p class="label-grey">The Founder</p>
+      <h2>Chef <span>Vidit Aren</span> leads Mettle Hospitality.</h2>
+    </div>
+    <div class="founder-content">
+      <p>Chef Vidit Aren leads Mettle Hospitality with a team of specialists who live and breathe hospitality. Based in Mumbai, Chef Vidit served as a managing partner and head chef at Slink & Bardot and Soufflé S'il Vous Plaît, a French bistro in Churchgate. He's spent years in the trenches: understanding what works on the plate, behind the bar, and in the business.</p>
+      <p>What drives us? Turning your culinary vision into something real. We don't just consult, we collaborate, create, and care deeply about every detail that makes a restaurant worth remembering.</p>
+    </div>
+  </section>
 
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-bottom">
-                <p>&copy; 2025 Mettle Hospitality. All rights reserved.</p>
-                <div class="footer-social-links">
-                    <a href="#">Instagram</a><a href="#">LinkedIn</a><a href="#">WhatsApp</a>
-                </div>
-            </div>
-        </div>
-    </footer>
+  <!-- THE CREW SECTION -->
+  <section id="crew">
+    <div class="section-header">
+      <p class="label-grey">The Crew</p>
+      <h2>The team that brings it all <span>together</span>.</h2>
+    </div>
+    <div class="grid grid-3">
+      <div class="card">
+        <h3>Senior-Led Expertise</h3>
+        <p>A small, seasoned crew that works closely on every project, with clear roles and direct involvement from start to finish.</p>
+      </div>
+      <div class="card">
+        <h3>Structured Approach</h3>
+        <p>We break problems into defined workstreams, assign ownership early, and move with urgency to deliver results.</p>
+      </div>
+      <div class="card">
+        <h3>Clear Communication</h3>
+        <p>Our approach values detail, clarity, and prompt communication—so decisions are reasoned, progress is visible, and outcomes are practical.</p>
+      </div>
+    </div>
+  </section>
 
-    <script src="app.js"></script>
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@graph": [
-        {
-          "@type": "Person",
-          "name": "Chef Vidit Aren",
-          "jobTitle": "Culinary Consultant",
-          "knowsAbout": ["Menu Engineering", "Kitchen Design", "Food Styling"]
-        },
-        {
-          "@type": "FAQPage",
-          "mainEntity": [
-            {
-              "@type": "Question",
-              "name": "What is Vantara Jamnagar?",
-              "acceptedAnswer": { "@type": "Answer", "text": "A significant project for which Chef Vidit Aren provided extensive culinary consultation for the Ambani family." }
-            }
-          ]
-        }
-      ]
-    }
-    </script>
+  <!-- ELEMENTAL IDENTITY SECTION -->
+  <section id="elements">
+    <div class="section-header">
+      <p class="label-grey">Our Identity · 4 Elements</p>
+      <h2>What makes <span>Mettle</span> different.</h2>
+    </div>
+    <div class="grid grid-4">
+      <div class="card element-card">
+        <div class="element-icon">🔥</div>
+        <h3>Heat</h3>
+        <p>The energy and urgency of a live kitchen. The drive to deliver excellence under pressure, every service.</p>
+      </div>
+      <div class="card element-card">
+        <div class="element-icon">💧</div>
+        <h3>Process</h3>
+        <p>Systems, consistency, and flow. Every element repeatable, every detail intentional, every outcome predictable.</p>
+      </div>
+      <div class="card element-card">
+        <div class="element-icon">🌿</div>
+        <h3>Produce</h3>
+        <p>Ingredients, sourcing, and seasonality. Quality in every bite, respect for the craft, honesty in flavour.</p>
+      </div>
+      <div class="card element-card">
+        <div class="element-icon">⚒️</div>
+        <h3>Craft</h3>
+        <p>The discipline and technique that makes it all repeatable. Mastery through practice, excellence through precision.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>&copy; 2025 Mettle Hospitality. All rights reserved.</p>
+    <p><a href="contact.html">Get in touch</a> | Based in Mumbai, serving nationwide & globally</p>
+  </footer>
+
+  <script src="app.js"></script>
 </body>
 </html>
