--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us - Mettle Hospitality</title>
+  <title>Mettle Hospitality - Culinary Consulting & Restaurant Launch</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="images/mettle-logo.jpg" type="image/jpeg">
 </head>
@@ -23,8 +23,8 @@
       </button>
       <nav id="nav-menu">
         <ul>
-          <li><a href="index.html" class="nav-link">Home</a></li>
-          <li><a href="about.html" class="nav-link active">Founder</a></li>
+          <li><a href="index.html" class="nav-link active">Home</a></li>
+          <li><a href="about.html" class="nav-link">Founder</a></li>
           <li><a href="service.html" class="nav-link">Services</a></li>
           <li><a href="work.html" class="nav-link">Projects</a></li>
           <li><a href="media.html" class="nav-link">Media</a></li>
@@ -34,76 +34,73 @@
     </div>
   </header>
 
-  <!-- HERO SECTION (About) -->
-  <section class="hero" id="about-hero">
-    <div class="hero-content">
-      <p class="label-grey">About Mettle Hospitality</p>
-      <h1>Crafting Culinary <span>Excellence with Precision and Passion</span>.</h1>
-      <p>Mettle — Strength Under Pressure. Exceptional restaurants aren't built on passion alone. They're forged through precision, discipline, and an unrelenting focus on every moment of the guest experience.</p>
-    </div>
-  </section>
+  <!-- SLIDESHOW HERO SECTION -->
+  <section class="slideshow-hero" id="home">
+    <div class="slideshow-container">
+      <!-- Slide 1: Logo + Brand intro -->
+      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/hero-bg-1.jpg') center/cover no-repeat; background-attachment: fixed;">
+        <div class="slide-content">
+          <img src="images/mettle-logo.jpg" alt="Mettle Hospitality" class="slide-logo">
+          <h2>Mettle Hospitality</h2>
+          <p>Bringing the New Age of Hospitality</p>
+          <div class="slide-buttons">
+            <a href="about.html" class="btn btn-primary">About Us</a>
+            <a href="contact.html" class="btn btn-secondary">Contact Us</a>
+          </div>
+        </div>
+      </div>
 
-  <!-- FOUNDER SECTION -->
-  <section id="founder">
-    <div class="section-header">
-      <p class="label-grey">The Founder</p>
-      <h2>Chef <span>Vidit Aren</span> leads Mettle Hospitality.</h2>
-    </div>
-    <div class="founder-content">
-      <p>Chef Vidit Aren leads Mettle Hospitality with a team of specialists who live and breathe hospitality. Based in Mumbai, Chef Vidit served as a managing partner and head chef at Slink & Bardot and Soufflé S'il Vous Plaît, a French bistro in Churchgate. He's spent years in the trenches: understanding what works on the plate, behind the bar, and in the business.</p>
-      <p>What drives us? Turning your culinary vision into something real. We don't just consult, we collaborate, create, and care deeply about every detail that makes a restaurant worth remembering.</p>
-    </div>
-  </section>
+      <!-- Slide 2: Innovation meets excellence -->
+      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/hero-bg-2.jpg') center/cover no-repeat; background-attachment: fixed;">
+        <div class="slide-content">
+          <h2>Where <span>culinary innovation</span> meets <span>operational excellence</span></h2>
+          <p>Transforming hospitality concepts into thriving businesses that set industry standards</p>
+          <div class="slide-buttons">
+            <a href="service.html" class="btn btn-primary">Our Services</a>
+            <a href="work.html" class="btn btn-secondary">Our Work</a>
+          </div>
+        </div>
+      </div>
 
-  <!-- THE CREW SECTION -->
-  <section id="crew">
-    <div class="section-header">
-      <p class="label-grey">The Crew</p>
-      <h2>The team that brings it all <span>together</span>.</h2>
-    </div>
-    <div class="grid grid-3">
-      <div class="card">
-        <h3>Senior-Led Expertise</h3>
-        <p>A small, seasoned crew that works closely on every project, with clear roles and direct involvement from start to finish.</p>
+      <!-- Slide 3: Sweet spot -->
+      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/hero-bg-3.jpg') center/cover no-repeat; background-attachment: fixed;">
+        <div class="slide-content">
+          <h2>We hit the sweet spot between <span>market relevance and creativity</span></h2>
+          <p>Design concepts, bar programs, kitchen flows so excellence is automatic</p>
+          <div class="slide-buttons">
+            <a href="service.html" class="btn btn-primary">Our Services</a>
+            <a href="work.html" class="btn btn-secondary">Our Work</a>
+          </div>
+        </div>
       </div>
-      <div class="card">
-        <h3>Structured Approach</h3>
-        <p>We break problems into defined workstreams, assign ownership early, and move with urgency to deliver results.</p>
-      </div>
-      <div class="card">
-        <h3>Clear Communication</h3>
-        <p>Our approach values detail, clarity, and prompt communication—so decisions are reasoned, progress is visible, and outcomes are practical.</p>
-      </div>
-    </div>
-  </section>
 
-  <!-- ELEMENTAL IDENTITY SECTION -->
-  <section id="elements">
-    <div class="section-header">
-      <p class="label-grey">Our Identity · 4 Elements</p>
-      <h2>What makes <span>Mettle</span> different.</h2>
-    </div>
-    <div class="grid grid-4">
-      <div class="card element-card">
-        <div class="element-icon">🔥</div>
-        <h3>Heat</h3>
-        <p>The energy and urgency of a live kitchen. The drive to deliver excellence under pressure, every service.</p>
+      <!-- Slide 4: Opinions into options -->
+      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/hero-bg-4.jpg') center/cover no-repeat; background-attachment: fixed;">
+        <div class="slide-content">
+          <h2><span>We turn opinions into options</span></h2>
+          <p>Consistent, rigorous thinking. No noise. Just clarity and partnership</p>
+          <div class="slide-buttons">
+            <a href="service.html" class="btn btn-primary">Our Services</a>
+            <a href="contact.html" class="btn btn-secondary">Let's Talk</a>
+          </div>
+        </div>
       </div>
-      <div class="card element-card">
-        <div class="element-icon">💧</div>
-        <h3>Process</h3>
-        <p>Systems, consistency, and flow. Every element repeatable, every detail intentional, every outcome predictable.</p>
+
+      <!-- Slide 5: Why Mettle -->
+      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/hero-bg-5.jpg') center/cover no-repeat; background-attachment: fixed;">
+        <div class="slide-content">
+          <h2>From blank space to <span>first service</span></h2>
+          <p>Brand, menu, systems, hiring, training, go-live. Complete end-to-end implementation</p>
+          <div class="slide-buttons">
+            <a href="work.html" class="btn btn-primary">See Projects</a>
+            <a href="contact.html" class="btn btn-secondary">Get Started</a>
+          </div>
+        </div>
       </div>
-      <div class="card element-card">
-        <div class="element-icon">🌿</div>
-        <h3>Produce</h3>
-        <p>Ingredients, sourcing, and seasonality. Quality in every bite, respect for the craft, honesty in flavour.</p>
-      </div>
-      <div class="card element-card">
-        <div class="element-icon">⚒️</div>
-        <h3>Craft</h3>
-        <p>The discipline and technique that makes it all repeatable. Mastery through practice, excellence through precision.</p>
-      </div>
+
+      <!-- Arrows -->
+      <button class="slideshow-arrow prev" aria-label="Previous slide">‹</button>
+      <button class="slideshow-arrow next" aria-label="Next slide">›</button>
     </div>
   </section>
 
