--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <section class="slideshow-hero" id="home">
     <div class="slideshow-container">
       <!-- Slide 1: Logo + Brand intro -->
-      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/hero-bg-1.jpg') center/cover no-repeat; background-attachment: fixed;">
+      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/heroback.jpg') center/cover no-repeat; background-attachment: fixed;">
         <div class="slide-content">
           <img src="images/mettle-logo.jpg" alt="Mettle Hospitality" class="slide-logo">
           <h2>Mettle Hospitality</h2>
@@ -51,7 +51,7 @@
       </div>
 
       <!-- Slide 2: Innovation meets excellence -->
-      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/hero-bg-2.jpg') center/cover no-repeat; background-attachment: fixed;">
+      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/jarback.jpg') center/cover no-repeat; background-attachment: fixed;">
         <div class="slide-content">
           <h2>Where <span>culinary innovation</span> meets <span>operational excellence</span></h2>
           <p>Transforming hospitality concepts into thriving businesses that set industry standards</p>
@@ -63,7 +63,7 @@
       </div>
 
       <!-- Slide 3: Sweet spot -->
-      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/hero-bg-3.jpg') center/cover no-repeat; background-attachment: fixed;">
+      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/panback.jpg') center/cover no-repeat; background-attachment: fixed;">
         <div class="slide-content">
           <h2>We hit the sweet spot between <span>market relevance and creativity</span></h2>
           <p>Design concepts, bar programs, kitchen flows so excellence is automatic</p>
@@ -75,7 +75,7 @@
       </div>
 
       <!-- Slide 4: Opinions into options -->
-      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/hero-bg-4.jpg') center/cover no-repeat; background-attachment: fixed;">
+      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/back1.jpg') center/cover no-repeat; background-attachment: fixed;">
         <div class="slide-content">
           <h2><span>We turn opinions into options</span></h2>
           <p>Consistent, rigorous thinking. No noise. Just clarity and partnership</p>
@@ -87,7 +87,7 @@
       </div>
 
       <!-- Slide 5: Why Mettle -->
-      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/hero-bg-5.jpg') center/cover no-repeat; background-attachment: fixed;">
+      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/back2.jpg') center/cover no-repeat; background-attachment: fixed;">
         <div class="slide-content">
           <h2>From blank space to <span>first service</span></h2>
           <p>Brand, menu, systems, hiring, training, go-live. Complete end-to-end implementation</p>
