--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header id="navbar">
     <div class="header-container">
       <div class="logo">
-        <img src="images/mettle logo no back.jpg" alt="Mettle Hospitality">
+        <img src="images/mettle logo no back.png" alt="Mettle Hospitality">
         <span>Mettle</span>
       </div>
       <button class="mobile-toggle" id="mobile-toggle">
