--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
   <!-- SLIDESHOW HERO SECTION -->
   <section class="slideshow-hero" id="home">
     <div class="slideshow-container">
-      <!-- Slide 1: Logo + Brand intro -->
-      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/heroback.JPG') ;">
+      <!-- Slide 1 -->
+      <div class="slide" style="background-image: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/heroback.JPG');">
         <div class="slide-content">
           <img src="images/mettle logo no back.png" alt="Mettle Hospitality" class="slide-logo">
           <h2>Mettle Hospitality</h2>
@@ -64,8 +64,8 @@
         </div>
       </div>
 
-      <!-- Slide 2: Innovation meets excellence -->
-      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/jarback.jpg') ;">
+      <!-- Slide 2 -->
+      <div class="slide" style="background-image: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/jarback.jpg');">
         <div class="slide-content">
           <h2>Where <span>culinary innovation</span> meets <span>operational excellence</span></h2>
           <p>Transforming hospitality concepts into thriving businesses that set industry standards</p>
@@ -76,8 +76,8 @@
         </div>
       </div>
 
-      <!-- Slide 3: Sweet spot -->
-      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/panback.jpg') ;">
+      <!-- Slide 3 -->
+      <div class="slide" style="background-image: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/panback.jpg');">
         <div class="slide-content">
           <h2>We hit the sweet spot between <span>market relevance and creativity</span></h2>
           <p>Design concepts, bar programs, kitchen flows so excellence is automatic</p>
@@ -88,8 +88,8 @@
         </div>
       </div>
 
-      <!-- Slide 4: Opinions into options -->
-      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/whiteback.JPG') ;">
+      <!-- Slide 4 -->
+      <div class="slide" style="background-image: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/whiteback.JPG');">
         <div class="slide-content">
           <h2><span>We turn opinions into options</span></h2>
           <p>Consistent, rigorous thinking. No noise. Just clarity and partnership</p>
@@ -100,8 +100,8 @@
         </div>
       </div>
 
-      <!-- Slide 5: Why Mettle -->
-      <div class="slide" style="background: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/cornback.JPG') ;">
+      <!-- Slide 5 -->
+      <div class="slide" style="background-image: linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 100%), url('images/cornback.JPG');">
         <div class="slide-content">
           <h2>From blank space to <span>first service</span></h2>
           <p>Brand, menu, systems, hiring, training, go-live. Complete end-to-end implementation</p>
@@ -117,6 +117,7 @@
       <button class="slideshow-arrow next" aria-label="Next slide">›</button>
     </div>
   </section>
+
 
   <!-- FOOTER -->
   <footer>
