--- a/about.html
+++ b/about.html
@@ -46,8 +46,8 @@
     </div>
   </header>
 
-  <!-- SLIDE 1: THE CREW (Full-width background image) -->
-  <section class="crew-section" style="margin-top: 60px;">
+  <!-- SLIDE 1: THE CREW -->
+  <section class="crew-section" id="crew" style="margin-top: 60px;">
     <div class="crew-overlay"></div>
     <div class="crew-content">
       <h2 class="crew-title">The Team That Brings It All Together</h2>
@@ -72,10 +72,8 @@
     </div>
   </section>
 
-  
-
   <!-- SLIDE 2: PURPOSE -->
-  <section class="purpose-section">
+  <section class="purpose-section" id="purpose">
     
     <!-- Left: Chef Photo -->
     <div class="purpose-image"></div>
@@ -89,80 +87,4 @@
       <h3 class="purpose-title">Purpose.</h3>
 
       <div class="purpose-text">
-        <p>We design concepts that hit the sweet spot between market relevance and creativity. We create bar programs that tell a story and engineer your space so excellence isn't forced—it's automatic.</p>
-        <p>Our commitment is a true partnership, from the initial concept pitch to reality. We craft focused menus, simple systems, and kitchen flows that keep your team supported day after day.</p>
-      </div>
-    </div>
-
-  </section>
-
-
-
-  <!-- SLIDE 3: NORTH STAR -->
-  <section class="north-star-section">
-
-    <h3 class="north-star-title">Our Guiding Principles</h3>
-
-    <div class="north-star-wrapper">
-      <!-- Left: Four Pillars Grid -->
-      <div class="north-star-grid">
-
-        <div class="north-star-pillar">
-          <h4>Innovation</h4>
-          <p>Leading and ensuring you're in the trend—or maybe a trendsetter yourself.</p>
-        </div>
-
-        <div class="north-star-pillar">
-          <h4>Operational Excellence</h4>
-          <p>Turn big ideas into kitchens, menus, systems, and service that actually run smoothly.</p>
-        </div>
-
-        <div class="north-star-pillar">
-          <h4>Commercial Viability</h4>
-          <p>Make premium commercially sane—clean margins, clean execution that drives profitability.</p>
-        </div>
-
-        <div class="north-star-pillar">
-          <h4>Strategic Partnership</h4>
-          <p>Your side—clear lens, no pushy decisions, just honest guidance.</p>
-        </div>
-
-      </div>
-
-      <!-- Right: North Star Image -->
-      <div class="north-star-image"></div>
-    </div>
-
-  </section>
-
-  <!-- FOOTER -->
-  <footer>
-    <div class="footer-content">
-      <div class="footer-left">
-        <img src="images/mettle logo no back.png" alt="Mettle Hospitality" class="footer-logo">
-      </div>
-      <div class="footer-center">
-        <nav class="footer-nav">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="service.html">Services</a></li>
-            <li><a href="work.html">Projects</a></li>
-            <li><a href="media.html">Media</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
-      <div class="footer-right">
-        <p>Based in Mumbai, serving nationwide & globally</p>
-        <p><a href="contact.html">Get in touch</a></p>
-      </div>
-    </div>
-    <div class="footer-bottom">
-      <p>&copy; 2025 Mettle Hospitality. All rights reserved.</p>
-    </div>
-  </footer>
-
-  <script src="app.js"></script>
-</body>
-</html>
+        <p>We design concepts that hit the
