--- a/service.html
+++ b/service.html
@@ -1,28 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services | Mettle Hospitality</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us - Mettle Hospitality</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="images/mettle logo no back.png" type="image/jpeg">
 </head>
-<body class="services-body">
+<body>
 
-    <!-- Sticky Navigation (Font fixed to Playfair) -->
-    <header class="nav-header">
-        <nav class="navbar">
-            <div class="logo">METTLE</div>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="service.html" class="active">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+  <!-- HEADER -->
+  <header id="navbar">
+    <div class="header-container">
+      <a href="index.html" class="logo">
+        <img src="images/mettle logo no back.png" alt="Mettle Hospitality">
+        <span></span>
+      </a>
+      <button class="mobile-toggle" id="mobile-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <nav id="nav-menu">
+        <ul>
+          <li><a href="index.html" class="nav-link">Home</a></li>
+          <li><a href="about.html" class="nav-link active">About us</a></li>
+          <li class="dropdown">
+              <a href="service.html" class="nav-link dropdown-toggle">Services</a>
+                <ul class="dropdown-menu">
+                   <li><a href="service.html#current">Current Services</a></li>
+                    <li><a href="service.html#past">Past Engagements</a></li>
+                </ul>
+          </li>
+          <li class="dropdown">
+            <a href="work.html" class="nav-link dropdown-toggle">Projects</a>
+            <ul class="dropdown-menu">
+              <li><a href="work.html#current">Current Projects</a></li>
+              <li><a href="work.html#past">Past Projects</a></li>
             </ul>
-        </nav>
-    </header>
+          </li>
+          <li><a href="media.html" class="nav-link">Media</a></li>
+          <li><a href="contact.html" class="nav-link">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
     <main class="services-wrapper">
         <!-- Background Image with Dark Overlay -->
@@ -137,7 +159,34 @@
             </div>
         </div>
     </section>
-
+ <!-- FOOTER -->
+  <footer>
+    <div class="footer-content">
+      <div class="footer-left">
+        <img src="images/mettle logo no back.png" alt="Mettle Hospitality" class="footer-logo">
+      </div>
+      <div class="footer-center">
+        <nav class="footer-nav">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="service.html">Services</a></li>
+            <li><a href="work.html">Projects</a></li>
+            <li><a href="media.html">Media</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="footer-right">
+        <p>Based in Mumbai, serving nationwide & globally</p>
+        <p><a href="contact.html">Get in touch</a></p>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2025 Mettle Hospitality. All rights reserved.</p>
+    </div>
+  </footer>
+    
     <script src="app.js"></script>
 </body>
 </html>
