--- a/service.html
+++ b/service.html
@@ -137,15 +137,17 @@
         </div>
     </main>
 
-    <!-- Section 2: Secret Sauce – Brand Deck Match -->
-    <section class="secret-sauce-wrapper" id="secret">
-      <div class="secret-inner">
-        <p class="label-grey">OUR SECRET SAUCE</p>
-        <h2>We turn opinions into <span>options.</span></h2>
-        <h2>We remove the noise from decisions.</h2>
-        <h2>Just consistent, rigorous thinking.</h2>
-      </div>
-    </section>
+   <section class="secret-sauce-wrapper" id="secret">
+  <div class="secret-inner">
+    <p class="label-grey">OUR SECRET SAUCE</p>
+
+    <h2 class="ss-line ss-line-primary">
+      We turn opinions into <span>options.</span>
+    </h2>
+    <h2 class="ss-line">We remove the noise from decisions.</h2>
+    <h2 class="ss-line">Just consistent, rigorous thinking.</h2>
+  </div>
+</section>
 
  <!-- FOOTER -->
   <footer>
